fixed overflow test

--- a/menu_site_2/style.css
+++ b/menu_site_2/style.css
@@ -206,13 +206,13 @@ article > div {
 }
 
 @media only screen and (max-width: 900px) {
-    /* html, 
+    html, 
     body {
-        height: 100vh; 
-        width: 100vw; 
-        overflow: hidden;
-        position: relative;
-    } */
+        /* height: 100vh; 
+        width: 100vw;  */
+        overflow: visible;
+        /* position: relative; */
+    }
 
     main {
         background-color: lightblue;
